# xnn-sub-translate

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json
apps/desktop/: README.md
docs/adr/: ADR-0001-monorepo-and-stack.md
docs/architecture/: data-model.md  desktop-app.md  ocr-strategy.md  overview.md  pipeline.md  repository-structure.md  sync-strategy.md  translation-pipeline.md
docs/glossary/: domain-terms.md
docs/implementation/: agent-workflows.md  backlog.md  roadmap.md  testing-strategy.md
docs/operations/: decision-log.md  local-development.md
docs/product/: mvp-scope.md  vision.md
services/engine/: README.md  pyproject.toml
services/engine/src/subtitle_rescue_engine/: __init__.py  contracts.py  project_layout.py  project_service.py  storage.py
services/engine/src/subtitle_rescue_engine/qa/: __init__.py  service.py
services/engine/src/subtitle_rescue_engine/subtitles/: __init__.py  ass_parser.py  exceptions.py  importer.py  normalization.py  srt_parser.py  srt_writer.py
services/engine/src/subtitle_rescue_engine/translation/: __init__.py  batching.py  client.py  errors.py  openai_client.py  schema.py  service.py
services/engine/tests/: test_contracts.py  test_openai_client.py  test_project_layout.py  test_project_service.py  test_storage.py  test_subtitle_importer.py  test_translation_service.py
services/engine/tests/fixtures/subtitles/: export_expected.srt  malformed.srt  simple.ass  simple.srt
